--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^0.28.5",
     "file-loader": "^0.11.2",
     "lodash": "^4.17.4",
+    "node-cron": "^1.2.1",
     "style-loader": "^0.18.2",
     "vue": "^2.4.2",
     "webpack": "^3.5.5",
